# untitled-folder-00

./: README.md  SMARTResponseSDK.def  exports.txt
backend/: CMakeLists.txt  main.cpp
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
headers/: baseapi.h  class.h  connection.h  errorinfo.h  features.h  question.h  questionset.h  smartresponseapiversioning.h  smartresponsesdk.h  types.h
